tests/ui/rfcs/rfc-2093-infer-outlives/nested-enum.stderr
error: rustc_outlives
  --> $DIR/nested-enum.rs:4:1
   |
LL | enum Foo<'a, T> {
   | ^^^^^^^^^^^^^^^
   |
   = note: T: 'a

error[E0640]: rustc_outlives
  --> $DIR/nested-enum.rs:4:1
   |
LL | enum Foo<'a, T> {
   | ^^^^^^^^^^^^^^^
   |
note: T: 'a
  --> $DIR/nested-enum.rs:10:5
   |
LL |     field2: &'b U
   |     ^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0640`.
